[metadata]
name = barspoon-transformer
version = 0.1.0
author = Marko van Treeck
author_email = markovantreeck@gmail.com
description = A transformer architecture for histopathological images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KatherLab/barspoon-transformer
project_urls =
    Bug Tracker = https://github.com/KatherLab/barspoon-transformer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    h5py~=3.8
    numpy~=1.24
    openpyxl~=3.1
    pandas~=2.0
    scikit-learn~=1.2
    torch~=2.0
    torchmetrics~=0.11.4
    pytorch-lightning~=2.0